new models added with final auth support

--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -1,7 +1,9 @@
 c3p0.driverClass=oracle.jdbc.driver.OracleDriver
 c3p0.jdbcUrl=jdbc:oracle:thin:@db.gnstx.gr:1521:ora
-c3p0.user=DUSR_BACKUP
-c3p0.password=sandripappa1977
+#c3p0.user=DUSR_BACKUP
+#c3p0.password=sandripappa1977
+c3p0.user=dusr
+c3p0.password=gnostix1971
 c3p0.minPoolSize=1
 c3p0.acquireIncrement=1
 c3p0.maxPoolSize=5
